--- a/Makefile.config
+++ b/Makefile.config
@@ -2,7 +2,7 @@
 
 REPO_NAME          := Dutch Tracks
 
-TARGET_FILES       := dutchtracks.grf
+BASE_FILENAME       := dutchtracks
 
 # Uncomment those lines which are applicable
 USE_NML := 1
@@ -17,14 +17,6 @@ USE_NML := 1
 # If everything is default, you don't need the rest:
 # EXTRA_DEP          :=
 
-# comment out those dirs which are not in use
-SRC_DIR            := src
-DOC_DIR            := docs
-SCRIPT_DIR         := scripts
-LANG_DIR           := lang
-# Add any dirs which shall be bundled in a source release additionally
-# to the dirs mentioned above.
-EXTRA_DIRS         :=
 
 # Documentation files:
 DOC_FILES = docs/readme.txt docs/license.txt docs/changelog.txt
@@ -37,24 +29,8 @@ DOC_FILES = docs/readme.txt docs/license.txt docs/changelog.txt
 # file extensions which indicate binary source files
 # FILE_INC_EXTENSIONS = wav pcx png
 
-# Replacement strings in the source and in the documentation
-# You may only change the values, not add new definitions
-# (unless you know where to add them in other places, too)
-REPO_TITLE_DUMMY      := {{GRF_TITLE}}
-GRF_ID_DUMMY          := {{GRF_ID}}
-REPO_REVISION_DUMMY   := {{REPO_REVISION}}
-OUTPUT_FILENAME_DUMMY := {{FILENAME}}
-GRF_MD5SUM_DUMMY      := {{GRF_MD5}}
-
 # List of all files which will get shipped
 # DOC_FILES = readme, changelog and license
 # GRF_FILENAME = MAIN_FILENAME_SRC with the extention .grf
 # Add any additional, not usual files here, too, including
 # their relative path to the root of the repository
-BUNDLE_FILES           = $(TARGET_FILES) $(DOC_FILES)
-
-# Files which also need cleaning:
-CLEAN_ADD             := docs/readme.txt
-
-#NMLC FLAGS
-#NML_FLAGS      = -c -p DOS
